// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test blue 1`] = `
<div
  className="foo"
>
  <div
    style={
      Object {
        "backgroundColor": "green",
      }
    }
  >
    <input
      onBlur={[Function]}
      onChange={[Function]}
      style={
        Object {
          "color": "blue",
        }
      }
      value="blue"
    />
  </div>
</div>
`;

exports[`test component 1`] = `
<div
  className="foo"
>
  <div
    style={
      Object {
        "backgroundColor": "green",
      }
    }
  >
    <input
      onBlur={[Function]}
      onChange={[Function]}
      style={
        Object {
          "color": undefined,
        }
      }
      value=""
    />
  </div>
</div>
`;

exports[`test red 1`] = `
<div
  className="foo"
>
  <div
    style={
      Object {
        "backgroundColor": "green",
      }
    }
  >
    <input
      onBlur={[Function]}
      onChange={[Function]}
      style={
        Object {
          "color": "red",
        }
      }
      value="red"
    />
  </div>
</div>
`;
